# mock_data_science_project

./: .gitignore  MIT License  README.md  config.toml  install.bat  logs.txt  main.py  pyproject.toml  train.toml
data/: database.db
metrics/20250223T194234_ExtraTreesClassifier/: 20250223T194234_ExtraTreesClassifier_cm.csv  20250223T194234_ExtraTreesClassifier_cr.txt  20250223T194234_ExtraTreesClassifier_importance.csv  20250223T194234_ExtraTreesClassifier_metrics.csv
notebooks/: EDA.ipynb
src/: config.py  create_mock_dataset.py  logger.py  setup.py  training.py  utils.py
